fix: UI Alignment issue in user order page

--- a/assets/styles/user/order.css
+++ b/assets/styles/user/order.css
@@ -26,7 +26,7 @@
     padding-bottom: var(--padding-inner);
     box-sizing: border-box;
 
-    width: 100%;
+    /* width: 100%; */
     align-items: center;
     /* justify-content: center; */
 /* 
